[package]
name = "mdana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xdrfile="0.3.0"
# plotly = { version = "0.8.3", features = ["kaleido"] }
plotly = "0.8.3"
regex = "1"

#  ndarray = "0.15.6"
# polars="0.26.0"

